--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "delegate-snap",
+  "name": "@ivan_holvinov/delegate-snap",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "homepage": "https://github.com/djvang/delegate-snap#readme",
+  "bugs": {
+    "url": "https://github.com/djvang/delegate-snap/issues"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "git+https://github.com/djvang/delegate-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
+  "author": "",
   "main": "src/index.ts",
   "files": [
     "dist/",
